--- a/webroot/test.html
+++ b/webroot/test.html
@@ -6,10 +6,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
-                $.ajax({url: "../employees/list", success: function(result){
-                    console.log("cosdfsdf:"+result);
-                    $("#div1").html(result);
-                }});
+//                $.ajax({url: "../employees/list", success: function(result){
+//                    console.log("cosdfsdf:"+result);
+//                    $("#div1").html(result);
+//                    console.log(jQuery.parseJSON(result));
+//                }});
+
+//            $.ajax({
+//                type: 'POST',
+//                url: '../employees/addemployee',
+//                data: { ext1: 10, firstName: "Test"},
+//                success: function(response) {
+//                    console.log(response);
+//                }
+//            });
             });
     </script>
 </head>
