--- a/webroot/testGet.html
+++ b/webroot/testGet.html
@@ -6,11 +6,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
-//                $.ajax({url: "../employees/list", success: function(result){
-//                    console.log("cosdfsdf:"+result);
-//                    $("#div1").html(result);
-//                    console.log(jQuery.parseJSON(result));
-//                }});
+                $.ajax({url: "../employees/list", success: function(result){
+                    console.log("cosdfsdf:"+result);
+                    $("#div1").html(result);
+                    console.log(jQuery.parseJSON(result));
+                }});
 
 //            $.ajax({
 //                type: 'POST',
