--- a/webroot/testPost.html
+++ b/webroot/testPost.html
@@ -3,8 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+
+            $.ajax({
+                type: 'POST',
+                url: '../employees/addemployee',
+                data: {
+                    extId: 10,
+                    firstName: "Svetoslav",
+                    lastName: "Bozhinov",
+                    position: "Charter",
+                    team : "Charting",
+                    startDate : "05/05/2014",
+                    birthday: "12/10/1993"
+                },
+                success: function(response) {
+                    console.log(response);
+                }
+            });
+        });
+    </script>
 </head>
 <body>
-
+<div id="div1">sdfsd</div>
 </body>
 </html>
