--- a/webroot/testGet.html
+++ b/webroot/testGet.html
@@ -7,19 +7,14 @@
     <script>
         $(document).ready(function(){
                 $.ajax({url: "../employees/list", success: function(result){
-                    console.log("cosdfsdf:"+result);
                     $("#div1").html(result);
                     console.log(jQuery.parseJSON(result));
                 }});
 
-//            $.ajax({
-//                type: 'POST',
-//                url: '../employees/addemployee',
-//                data: { ext1: 10, firstName: "Test"},
-//                success: function(response) {
-//                    console.log(response);
-//                }
-//            });
+            $.ajax({url: "../employees/getemployee/1", success: function(result){
+                $("#div1").html(result);
+                console.log(jQuery.parseJSON(result));
+            }});
             });
     </script>
 </head>
